fix image on iphone

--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -67,12 +67,10 @@
         @include mobile {
             height: 299px;
             width: 425px;
-            float: none;
-            display: block;
             object-fit: cover;
         }
         @include tablet {
-            height: auto;
+            // height: auto;
         }
         
 
